<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="1"

        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        android:text="@string/TextViewMessage"
        android:gravity="center_vertical"
        />

    <EditText
        android:id="@+id/EditTextId"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="1"

        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        android:hint="@string/EditTextMessage"
        android:gravity="center_vertical"
        />

    <Button
        android:id="@+id/ButtonId"
        android:onClick="onClick"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="1"

        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        android:text="@string/ButtonMessage"
        />
</LinearLayout>