<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/TextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/EditTextId"

        android:text="@string/TextViewMessage"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/EditTextId"

        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextView"
        app:layout_constraintBottom_toTopOf="@id/ButtonId"
        android:hint="@string/EditTextMessage"
        android:gravity="center"
        />

    <Button
        android:id="@+id/ButtonId"
        android:onClick="onClick"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditTextId"
        app:layout_constraintBottom_toBottomOf="parent"

        android:text="@string/ButtonMessage"
        />
</androidx.constraintlayout.widget.ConstraintLayout>